# cufries

./: .all_food.json  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  get_new_images.py  next.config.js  package-lock.json  package.json  resize_food_images.py  tsconfig.json
.github/workflows/: deploy.yaml
components/: FrySection.tsx
components/FryCard/: FryCard.jsx  FryCard.module.css  frycard.module.css
components/FrySection/: FrySection.jsx  FrySection.module.css
components/LoadingIndicator/: LoadingIndicator.jsx  LoadingIndicator.module.css
components/LogoHeader/: LogoHeader.jsx  LogoHeader.module.css  LogoHeader.tsx  logoheader.module.css
pages/: _app.tsx  about.jsx  about.module.css  index.jsx  index.tsx  settings.jsx  settings.module.css
pages/api/: all-food.js  all-food.ts  getimage.js  menu-day.js  menu-day.ts  week.ts
pages/testpages/: loading.jsx
python/: all_food_migration.py  convert_to_webp.py  getimages.py  preloadimages.py
rust/: Cargo.toml
rust/src/: main.rs  menu.rs  types.rs
styles/: globals.css
util/: menu.js  scraper.ts  types.ts
